--- a/angular.json
+++ b/angular.json
@@ -76,40 +76,10 @@
             "browserTarget": "WEBTESTER:build"
           }
         },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
+        "testNH": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "protractor.notHeadless.js --params.menu",
             "devServerTarget": "WEBTESTER:serve"
           },
           "configurations": {
@@ -118,10 +88,10 @@
             }
           }
         },
-        "testNH": {
+        "testH": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.notHeadless.js --params.menu",
+            "protractorConfig": "protractor.headless.js --params.menu",
             "devServerTarget": "WEBTESTER:serve"
           },
           "configurations": {
