--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "testNH":"protractor protractor.notHeadless.js --params.menu",
+    "installDeps": "powershell -executionpolicy bypass -File ./installDependencies.ps1",
+    "testNH": "protractor protractor.notHeadless.js --params.menu",
     "testH": "protractor protractor.headless.js --params.menu"
   },
   "private": true,
@@ -33,7 +30,7 @@
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
-    "@types/jasmine": "^3.6.1",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
